--- a/app/views/help_en.scala.html
+++ b/app/views/help_en.scala.html
@@ -78,7 +78,7 @@
 	<section>
 		<h2 class="alert alert-info">Home</h2>
 		<article>
-			<p>Top page of this application. You can show this page by "Home" button of the side mentu.</p>
+			<p>Top page of this application. You can show this page by "Home" menu.</p>
 			<p>This page has list of rooms.</p>
 			<dl>
 				<dt>Recent</dt>
@@ -92,280 +92,277 @@
 		</article>
 	</secition>
 	<section>
-		<h2 class="alert alert-info">ルームの作成／編集</h2>
+		<h2 class="alert alert-info">Making and editing room</h2>
 		<article>
-			<p>サイドメニューの「ルームの作成」を選択することでルーム作成画面が表示されます。</p>
+			<p>You can show this page by "Make room" menu.</p>
 		</article>
 		<table class="table">
 			<tr>
-				<th>ルーム名</th>
-				<td>ルームの名前を指定します。唯一の必須項目です。</td>
+				<th>Room name</th>
+				<td>Set the room name.This field is required.</td>
 			</tr>
 			<tr>
-				<th>参加者の問題投稿を許可</th>
-				<td>チェックすると自分以外のユーザーが問題を投稿できるようになります。</td>
+				<th>Allow user question.</th>
+				<td>If checked, anyone can post the question to room owner.</td>
 			</tr>
 			<tr>
-				<th>タグ</th>
-				<td>任意の文字列を設定できます。(現在未使用ですが将来的に検索できるようになるかもしれません。)</td>
+				<th>Tag</th>
+				<td>Any string.(It is not used currently.)</td>
 			</tr>
 			<tr>
-				<th>ハッシュタグ</th>
-				<td>チャットに付加されるハッシュタグを指定します。</td>
+				<th>Hashtag</th>
+				<td>Hashtag for chat.</td>
 			</tr>
 			<tr>
-				<th>説明</th>
-				<td>任意の説明を記述します。</td>
+				<th>Description</th>
+				<td>Any description.</td>
 			</tr>
 		</table>
 		<article>
-			<p>ルームの設定内容はサイドメニューの「ルームの編集」からいつでも変更できます。</p>
+			<p>You can change room settings by "Edit room" menu.</p>
 		</article>
 	</secition>
 	<section>
-		<h2 class="alert alert-info">問題の作成</h2>
+		<h2 class="alert alert-info">Make question</h2>
 		<article>
-			<p>サイドメニューの「問題の編集／出題」を選択することで問題一覧画面が表示されます。</p>
-			<p>または画面下のショートカットバーからもこの画面を開くことができます。</p>
+			<p>You can show this page by "Edit and publish questions" menu.</p>
+			<p>Or from shortcut bar of the bottom.</p>
 			<dl>
-				<dt>ストック</dt>
+				<dt>Stock</dt>
 				<dd>
-					<p>まだ一度も出題したことがない問題の一覧です。</p>
-					<p>各行をクリックすることで詳細画面に遷移し内容を変更することができます。</p>
-					<p>またイベント開催時には一覧からショートカット的に問題を出題できます。(詳細画面からも出題はできます。)</p>
+					<p>Listed questions that are not published.</p>
+					<p>You can look and edit the detail information by clicking a row.</p>
+					<p>If the event is running, you can publish the question from this page.</p>
 				</dd>
 
-				<dt>出題済み</dt>
+				<dt>Published</dt>
 				<dd>
-					<p>過去に出題した問題の一覧です。</p>
-					<p>各行をクリックすることで詳細画面に遷移しますが内容を変更することはできません。</p>
-					<p>(問題をコピーして新しい問題として登録することはできます。)</p>
-					<p>一覧にはこれまでの出題回数と累計正答者数が表示されます。</p>
-					<p>出題済みの問題であってもイベントが変われば詳細画面から何度でも出題することができます。</p>
+					<p>Listed questions that are published in past events.</p>
+					<p>You can look the detail information by clicking a row. But can not edit.</p>
+					<p>(You can copy the question as a new question.)</p>
+					<p>The number of published and total number of correct answerers are shown in this list.</p>
+					<p>You can publish already published question in each event.</p>
 				</dd>
 
-				<dt>新規作成</dt>
+				<dt>New</dt>
 				<dd>
-					<p>問題作成画面に遷移します。</p>
+					<p>Move to the page of creating question.</p>
 				</dd>
 			</dl>
 		</article>
 		<table class="table">
 			<tr>
-				<th>問題</th>
-				<td>問題文を記述します。</td>
+				<th>Question</th>
+				<td>Describe the question.</td>
 			</tr>
 			<tr>
-				<th>選択肢</th>
+				<th>Choices</th>
 				<td>
-					<p>回答の選択肢を記述します。</p>
-					<p>改行区切りで最大5つまで指定できます。</p>
+					<p>Choices of the question.</p>
+					<p>You can specify five choices separated by new line.</p>
 				</td>
 			</tr>
 			<tr>
-				<th>正解</th>
+				<th>Correct choice</th>
 				<td>
-					<p>問題の正解がどれであるかの設定です。</p>
+					<p>Specify the correct answer.</p>
 					<ul>
-						<li>先頭行 - 選択肢の先頭行が正解になります。</li>
-						<li>最も多かった回答 - 回答者の一番多かった選択肢が正解となります。</li>
-						<li>最も少なかった回答 - 回答者の一番少なかった選択肢がが正解となります。(0は除く)</li>
-						<li>正解なし - アンケートのような正解のない問題を出す場合に使用します。</li>
+						<li>First row - First row of choices is correct.</li>
+						<li>Answer the most frequent - The answer which has most frequent answerer is correct.</li>
+						<li>Answer the least frequent - The answer which has least frequent answerer is correct.(expect 0)</li>
+						<li>No answer - This question has no answer.</li>
 					</ul>
 				</td>
 			</tr>
 			<tr>
-				<th>タグ</th>
-				<td>任意の文字列を設定できます。(現在未使用ですが将来的に検索できるようになるかもしれません。)</td>
+				<th>Tag</th>
+				<td>Any string.(It is not used currently.)</td>
 			</tr>
 			<tr>
-				<th>説明</th>
-				<td>任意の説明を記述します。</td>
+				<th>Description</th>
+				<td>Any description.</td>
 			</tr>
 			<tr>
-				<th>参考リンク</th>
-				<td>問題の解説として参考になるサイトがあるならそのURLを指定します。</td>
+				<th>Reference link</th>
+				<td>Any link for question.</td>
 			</tr>
 		</table>
 		<article class="alert alert-warning">
-			<p>イベント参加者はマイページから自分の参加したイベントの問題を振り返ることができるので、勉強会目的の場合は説明、参考リンクを設定しておくことで学習の助けとなります。</p>
+			<p>Quiz panelists can lookback question from my page.So if the quiz master set detailed description and reference link, it it useful for quiz panelists.</p>
 		</article>
-		<h3>問題の出題</h3>
+		<h3>Publish question</h3>
 		<article>
-			<p>イベント開催時にはこの画面から問題を出題することができます。</p>
+			<p>In the event session, you can publish question from this page.</p>
 		</article>
 		<table class="table">
 			<tr>
-				<th>ランキングに含める</th>
-				<td>チェックを外すと問題に正解してもランキング集計の対象外となります。</td>
+				<th>Include ranking</th>
+				<td>If unchecked, this question will be out of the ranking.</td>
 			</tr>
 		</table>
 		<article class="alert alert-warning">
 			<ul>
-				<li>正解なしの問題はランキングに含めることはできません。</li>
-				<li>先頭行が正解の問題は出題時に選択肢がシャッフルされます。</li>
-				<li>それ以外の問題は指定の順で選択肢が表示されます。</li>
+				<li>The question which has no answer can not include in ranking.</li>
+				<li>If the correct answer is first row, the choices are shuffled.</li>
 			</ul>
 		</article>
-		<h3>問題の投稿</h3>
+		<h3>Post question</h3>
 		<article>
-			<p>ルームの設定で参加者の問題投稿が許可されている場合は誰でも問題を作成することができます。</p>
-			<p>ただし、問題の投稿後はその問題は主催者に委ねられるので問題を修正することはできません。</p>
-			<p>主催者は投稿された問題を自由に修正することができます。</p>
+			<p>If posting question is allowed by room setting, anyone can make a question and post it to room owner.</p>
+			<p>But after posting question, it is managed by room owner. So you can not modify it after posting.</p>
+			<p>The room owner can freely modify it.</p>
 		</article>
 	</secition>
 	<section>
-		<h2 class="alert alert-info">イベントの編集</h2>
+		<h2 class="alert alert-info">Edit event.</h2>
 		<article>
-			<p>サイドメニューの「イベントの編集」を選択することでイベントの編集、開始、終了を行う画面が表示されます。</p>
-			<p>イベントが開始されていない場合はイベント内容の入力フォームが表示され、その修正とイベントの開始を行うことができます。</p>
-			<p>イベントが開始されている場合は参加者一覧が表示されイベントの終了を行うことができます。</p>
+			<p>You can show this page by "Edit event" menu.</p>
+			<p>If the event is not started, you can modify event settings and start event.</p>
+			<p>If the event is running, event entry are listed. You can finish event.</p>
 		</article>
 		<table class="table">
 			<tr>
-				<th>定員</th>
-				<td>イベントに参加できる人数を設定します。現在は最大50人に制限されています。</td>
+				<th>Capacity</th>
+				<td>Capacity of the event. Currently the max number of capacity is limited to 50.</td>
 			</tr>
 			<tr>
-				<th>タイトル</th>
-				<td>任意のイベントタイトルを指定します。</td>
+				<th>Title</th>
+				<td>Title of the event.</td>
 			</tr>
 			<tr>
-				<th>開始日</th>
-				<td>イベントの開始予定日を指定します。</td>
+				<th>Start date</th>
+				<td>Specify the start date of the event.</td>
 			</tr>
 			<tr>
-				<th>開始時刻</th>
-				<td>イベントの開始予定時刻を指定します。</td>
+				<th>Start time</th>
+				<td>Specify the start time of the event.</td>
 			</tr>
 			<tr>
-				<th>パスコード</th>
+				<th>Passcode</th>
 				<td>
-					<p>指定するとイベント参加時にパスコードの入力を求められるようになります。</p>
-					<p>(つまりパスコードを知っている人しかイベントに参加できなくなります。)</p>
+					<p>If specified, passcode is required to entry event.</p>
 				</td>
 			</tr>
 			<tr>
-				<th>説明</th>
-				<td>任意の説明を記述します。</td>
+				<th>Description</th>
+				<td>Any description.</td>
 			</tr>
 		</table>
 		<article class="alert alert-warning">
 			<ul>
-				<li>イベントの設定項目に必須項目はありません。この画面の表示後に何も入力せずにすぐにイベントを開始することができます。</li>
-				<li>開始日、開始時刻を設定してもその時間に自動的にイベントが開始されるわけではありません。イベントの開始はあくまで主催者が手動で行います。これらの項目は近日開催のイベント一覧の検索のためにのみ使用されます。</li>
-				<li>24時間以上問題が出題されていないイベントは自動的に終了します。</li>
-				<li>過去のイベント情報の変更はできません。</li>
+				<li>There is no necessary field in event settings. So you can start event without input anything.</li>
+				<li>If you specify the start date and time, the event doesn't start automatically at that time. These fields are used to make recent event list.</li>
+				<li>If the running event spend 24 hours without publishing question, it automatically close.</li>
+				<li>You can not modify past event information.</li>
 			</ul>
 		</article>
 	</secition>
 	<section>
-		<h2 class="alert alert-info">イベントへの参加</h2>
+		<h2 class="alert alert-info">Entry the event</h2>
 		<article>
-			<p>主催者でないユーザーがルーム内にいる時にイベントが開始されるとイベントへの参加を問い合わせるパネルが表示されます。</p>
-			<p>ここで「参加」をクリックするとイベントに参加できます。</p>
+			<p>When the room owner starts the event, others in the room see the confirm dialog of event entry.</p>
+			<p>You can entry the event by it.</p>
 		</article>
 		<article class="alert alert-warning">
 			<ul>
-				<li>イベント参加のパネルで「参加しない」を選択した場合でも、後から画面右上のユーザーメニューから参加することができます。</li>
-				<li>イベントへの参加は先着順です。定員に達した場合はそれ以降のイベント参加は受け付けられなくなります。</li>
-				<li>一度参加したイベントのキャンセルはできません。参加後一問も回答せずに退室(ブラウザ終了)した場合でも参加扱いとなります。(定員にカウントされます。)</li>
-				<li>イベントに参加していない状態でもルーム内にいれば問題を見ることはできますが回答はできません。</li>
+				<li>You also entry the event from user menu.</li>
+				<li>Event entry is first come, first served.If the number of event entry is reached to the capacity, following entry is rejected.</li>
+				<li>You can not cancel the entried event.</li>
+				<li>If you don't entry the event, you can see the question, but can not answer.</li>
 			</ul>
 		</article>
 	</secition>
 	<section>
-		<h2 class="alert alert-info">問題の解答</h2>
+		<h2 class="alert alert-info">Answer the question</h2>
 		<article>
-			<p>主催者が問題を出題するとすぐに参加者の端末で問題が表示されます。正解と思うボタンをクリックしてください。制限時間は10秒です。</p>
-			<p>解答後は選択肢ごとの人数がボタン上に表示され、10秒後には正解と問題の解説が表示されます。</p>
+			<p>When the room owner publish the question, it shows in others device.The time for choosing answer is 10 seconds.</p>
+			<p>The number of answerer is shown in the button.</p>
 		</article>
 	</secition>
 	<section>
-		<h2 class="alert alert-info">ランキング</h2>
+		<h2 class="alert alert-info">Ranking</h2>
 		<article>
-			<p>サイドメニューの「ランキング」またはショートカットバーからランキング画面を開くことができます。</p>
+			<p>You can see this page by "Ranking" menu. Or from shortcut bar of the bottom.</p>
 			<dl>
 				<dt>Now!</dt>
 				<dd>
-					<p>現在開催中のイベントのランキング。一問毎に順位が入れ替わります。</p>
-					<p>(イベント開催中以外は表示されません。)</p>
+					<p>The ranking of currently running event.</p>
+					<p>If the event is not running, it isn't shown.</p>
 				</dd>
 
-				<dt>イベント別</dt>
-				<dd>過去のイベントの優勝者一覧。行をクリックすることでそのイベントのランキングが表示されます。</dd>
+				<dt>Event</dt>
+				<dd>The winners list of past event. You can look the detail ranking by clicking the row.</dd>
 
-				<dt>通算</dt>
-				<dd>イベントを通しての通算ランキング。行をクリックすることでその人の各イベントでの成績が表示されます。</dd>
+				<dt>Total</dt>
+				<dd>Total ranking of the room. You can look the detail of the user by clicking the row.</dd>
 			</dl>
-			<p>イベントランキングの算出方法は以下です。</p>
+			<p>The event ranking is calced by following step.</p>
 			<ol>
-				<li>正答数の多い順</li>
-				<li>正答数が同じ場合は、正答した問題の解答にかかったタイムの短い順</li>
+				<li>The number of correct answer.</li>
+				<li>If it is same, the time of correct answer.</li>
 			</ol>
-			<p>イベント終了時にイベントランキングの上位10人にはそれぞれ10ポイントから1ポイントまでのポイントが加算されます。</p>
-			<p>それを踏まえて通算ランキングの算出方法は以下です。</p>
+			<p>When the event finish, top 10 user get the points.</p>
+			<p>The total ranking is calced by following step.</p>
 			<ol>
-				<li>ポイントの多い順</li>
-				<li>ポイントが同じ場合は、正答数の多い順</li>
-				<li>ポイント、正答数が同じ場合は、正答した問題の解答にかかったタイムの短い順</li>
+				<li>Point</li>
+				<li>If it is same, the number of correct answer.</li>
+				<li>If those are same, the time of correct answer.</li>
 			</ol>
 		</article>
 	</secition>
 	<section>
-		<h2 class="alert alert-info">マイページ</h2>
+		<h2 class="alert alert-info">My page</h2>
 		<article>
-			<p>サイドメニューの「マイページ」を選択することでマイページ画面を開くことができます。</p>
-			<p>マイページでは自分の参加したイベントまたは主催したイベントの問題を振りかえることができます。</p>
+			<p>You can show this page by "My page" menu.</p>
+			<p>In this page, you can lookback the questions of past events.</p>
 			<dl>
-				<dt>参加ルーム</dt>
+				<dt>Entries</dt>
 				<dd>
-					<p>イベントに参加したことのあるルームの一覧です。</p>
-					<p>各行をクリックすることで、以下の画面にブレイクダウンしていきます。</p>
+					<p>List of the rooms which has your entry.</p>
+					<p>You can look the following breakdown by clicking the row.</p>
 					<ul>
-						<li>そのルームで参加したイベントの一覧と総合順位</li>
-						<li>イベントで出題された問題一覧</li>
-						<li>出題された問題とその解説</li>
+						<li>The event list and total ranking of the specified room.</li>
+						<li>The question list of the specified event.</li>
+						<li>The specified question and its description.</li>
 					</ul>
 				</dd>
 
-				<dt>主催ルーム</dt>
+				<dt>Owners</dt>
 				<dd>
-					<p>自分の主催するルームの一覧です。</p>
-					<p>各行をクリックすることで、以下の画面にブレイクダウンしていきます。</p>
+					<p>List of your own rooms.</p>
+					<p>You can look the following breakdown by clicking the row.</p>
 					<ul>
-						<li>開催したイベントの一覧と参加人数</li>
-						<li>イベントで出題された問題一覧</li>
-						<li>出題された問題とその解説</li>
+						<li>The event list and the number of its entry.</li>
+						<li>The question list of the specified event.</li>
+						<li>The specified question and its description.</li>
 					</ul>
 				</dd>
 			</dl>
 		</article>
 	</secition>
 	<section>
-		<h2 class="alert alert-info">チャット</h2>
+		<h2 class="alert alert-info">Chat</h2>
 		<article>
-			<p>サイドメニューの「チャット」またはショートカットバーからチャット画面を開くことができます。</p>
-			<p>オプションでここでの発言内容を同時にTwitterに投稿することもできます。</p>
+			<p>You can look this page by "Chat" menu. Or from shortcut bar of the bottom.</p>
+			<p>Optionally, you can tweet it to tweeter.</p>
 		</article>
 		<article class="alert alert-warning">
-			<p>チャットの内容はどこにも保存されておらず、画面をリロードするだけでも過去の発言は見えなくなります。</p>
-			<p>本格的なコミュニケーション手段というよりもTwitter感覚でお使いください。</p>
+			<p>The content of chat are not stored anywhere. So there is no way to see past chat.</p>
 		</article>
 	</secition>
 	<section>
-		<h2 class="alert alert-info">ユーザー設定</h2>
+		<h2 class="alert alert-info">User setting</h2>
 		<article>
-			<p>ユーザーメニューの「設定」をクリックすることでユーザー設定画面を開くことができます。</p>
+			<p>You can look this page by "Setting" menu of user menu.</p>
 		</article>
 		<table class="table">
 			<tr>
-				<th>ユーザー名</th>
-				<td>ユーザー名を変更します。</td>
+				<th>Username</th>
+				<td>Change username.</td>
 			</tr>
 			<tr>
-				<th>チャットメッセージを通知する</th>
-				<td>チェックするとチャットに発言があった時にポップアップで通知されます。</td>
+				<th>Notify tweet.</th>
+				<td>Show notify dialog, when someone tweet.</td>
 			</tr>
 		</table>
 	</secition>
