change style of mypage

--- a/app/assets/stylesheets/style.less
+++ b/app/assets/stylesheets/style.less
@@ -106,6 +106,13 @@ nav.paging-bar .btn i   { color: #5bc0de; font-weight: bold; }
 #mypage .mypage-totalranking { display: inline-block; margin-top: 10px; padding: 5px 10px; color: #fff; font-weight: bold; background: #333; }
 #mypage-entries td.r-room { color: #5bc0de; }
 
+.mypage th.q-question,
+.mypage td.q-question { width: 80%;}
+.mypage th.q-correct,
+.mypage td.q-correct { width: 20%;}
+td.q-correct i.fa-times { color:#ff497a;}
+td.q-correct i.fa-circle-o { color:#5bc0de;}
+
 #event-members .paging-bar  { margin-top: 10px; margin-bottom: 10px; }
 #event-members .paging-bar li { padding-top: 5px; padding-bottom: 5px; }
 #event-detail h3        { margin-top: 20px; }
