--- a/app/views/mypage.scala.html
+++ b/app/views/mypage.scala.html
@@ -1,5 +1,5 @@
 @(sessionInfo: SessionInfo)(implicit lang: Lang)
-<div id="mypage" class="workspace">
+<div id="mypage" class="workspace mypage">
 	<div class="tab-content" style="display:none;">
 		<ul class="clear-fix">
 			<li><a href="#mypage-entries">@Messages("entriedRooms")</a></li>
