--- a/app/views/help_ja.scala.html
+++ b/app/views/help_ja.scala.html
@@ -1,9 +1,9 @@
 @(sessionInfo: SessionInfo)(implicit lang: Lang)
 <div id="help" class="workspace help">
 	<section>
-		<h1 class="alert alert-info">@Messages("application.title")にようこそ!</h1>
+		<h1 class="alert alert-info-headline">@Messages("application.title")にようこそ!</h1>
 		<article>
-			<p>@Messages("application.title")は出題者と回答者にわかれてリアルタイムにクイズを楽しむ子をとができるアプリケーションです。</p>
+			<p>@Messages("application.title")は出題者と回答者にわかれてリアルタイムにクイズを楽しむことができるアプリケーションです。</p>
 			<p>勉強会などで学習の補助ツールとして使うこともできますし、パーティ会場での純粋なクイズゲームとして楽しむこともできます。</p>
 		</article>
 		<article class="alert alert-danger">
@@ -13,7 +13,7 @@
 		</article>
 	</section>
 	<section>
-		<h2 class="alert alert-info">出題者の使い方の流れ</h2>
+		<h2 class="alert alert-info subhead">出題者の使い方の流れ</h2>
 		<article>
 			<p>出題者となる人はまず最初に自分がクイズを出すためのルームを作成します。</p>
 			<p>ルーム名には「Java勉強会」「AKBのあれやこれや」など問題のテーマがわかる名前をつけてください。</p>
@@ -31,7 +31,7 @@
 		</article>
 	</secition>
 	<section>
-		<h2 class="alert alert-info">回答者の使い方の流れ</h2>
+		<h2 class="alert alert-info subhead">回答者の使い方の流れ</h2>
 		<article>
 			<p>回答者はまず出題者の主催するルームに入室します。</p>
 			<p>ルーム内では同じルームにいる人とチャットをすることができます。</p>
@@ -46,7 +46,7 @@
 		</article>
 	</secition>
 	<section>
-		<h2 class="alert alert-info">画面構成</h2>
+		<h2 class="alert alert-info subhead">画面構成</h2>
 		<article>ToDo スナップショットx2 画面内に番号を振る</article>
 		<ol>
 			<li>メニューボタン。クリックするとサイドメニューが表示されます。</li>
@@ -56,7 +56,7 @@
 		</ol>
 	</secition>
 	<section>
-		<h2 class="alert alert-info">サインイン</h2>
+		<h2 class="alert alert-info subhead">サインイン</h2>
 		<article>
 			<p>このアプリケーションを使用するためにはTwitterアカウントが必要です。</p>
 			<p>トップページの
@@ -77,7 +77,7 @@
 		</article>
 	</secition>
 	<section>
-		<h2 class="alert alert-info">ホーム</h2>
+		<h2 class="alert alert-info subhead">ホーム</h2>
 		<article>
 			<p>トップページです。またはサイドメニューの「ホーム」を選択することで表示されます。</p>
 			<p>ルームの一覧が表示されます。</p>
@@ -93,38 +93,28 @@
 		</article>
 	</secition>
 	<section>
-		<h2 class="alert alert-info">ルームの作成／編集</h2>
+		<h2 class="alert alert-info subhead">ルームの作成／編集</h2>
 		<article>
 			<p>サイドメニューの「ルームの作成」を選択することでルーム作成画面が表示されます。</p>
 		</article>
-		<table class="table">
-			<tr>
-				<th>ルーム名</th>
-				<td>ルームの名前を指定します。唯一の必須項目です。</td>
-			</tr>
-			<tr>
-				<th>参加者の問題投稿を許可</th>
-				<td>チェックすると自分以外のユーザーが問題を投稿できるようになります。</td>
-			</tr>
-			<tr>
-				<th>タグ</th>
-				<td>任意の文字列を設定できます。(現在未使用ですが将来的に検索できるようになるかもしれません。)</td>
-			</tr>
-			<tr>
-				<th>ハッシュタグ</th>
-				<td>チャットに付加されるハッシュタグを指定します。</td>
-			</tr>
-			<tr>
-				<th>説明</th>
-				<td>任意の説明を記述します。</td>
-			</tr>
-		</table>
+		<dl>
+			<dt>ルーム名</dt>
+			<dd>ルームの名前を指定します。唯一の必須項目です。</dd>
+			<dt>参加者の問題投稿を許可</dt>
+			<dd>チェックすると自分以外のユーザーが問題を投稿できるようになります。</dd>
+			<dt>タグ</dt>
+			<dd>任意の文字列を設定できます。(現在未使用ですが将来的に検索できるようになるかもしれません。)</dd>
+			<dt>ハッシュタグ</dt>
+			<dd>チャットに付加されるハッシュタグを指定します。</dd>
+			<dt>説明</dt>
+			<dd>任意の説明を記述します。</dd>
+		</dl>
 		<article>
 			<p>ルームの設定内容はサイドメニューの「ルームの編集」からいつでも変更できます。</p>
 		</article>
 	</secition>
 	<section>
-		<h2 class="alert alert-info">問題の作成</h2>
+		<h2 class="alert alert-info subhead">問題の作成</h2>
 		<article>
 			<p>サイドメニューの「問題の編集／出題」を選択することで問題一覧画面が表示されます。</p>
 			<p>または画面下のショートカットバーからもこの画面を開くことができます。</p>
@@ -135,7 +125,6 @@
 					<p>各行をクリックすることで詳細画面に遷移し内容を変更することができます。</p>
 					<p>またイベント開催時には一覧からショートカット的に問題を出題できます。(詳細画面からも出題はできます。)</p>
 				</dd>
-
 				<dt>出題済み</dt>
 				<dd>
 					<p>過去に出題した問題の一覧です。</p>
@@ -144,28 +133,19 @@
 					<p>一覧にはこれまでの出題回数と累計正答者数が表示されます。</p>
 					<p>出題済みの問題であってもイベントが変われば詳細画面から何度でも出題することができます。</p>
 				</dd>
-
 				<dt>新規作成</dt>
 				<dd>
 					<p>問題作成画面に遷移します。</p>
 				</dd>
-			</dl>
-		</article>
-		<table class="table">
-			<tr>
-				<th>問題</th>
-				<td>問題文を記述します。</td>
-			</tr>
-			<tr>
-				<th>選択肢</th>
-				<td>
+				<dt>問題</dt>
+				<dd>問題文を記述します。</dd>
+				<dt>選択肢</dt>
+				<dd>
 					<p>回答の選択肢を記述します。</p>
 					<p>改行区切りで最大5つまで指定できます。</p>
-				</td>
-			</tr>
-			<tr>
-				<th>正解</th>
-				<td>
+				</dd>
+				<dt>正解</dt>
+				<dd>
 					<p>問題の正解がどれであるかの設定です。</p>
 					<ul>
 						<li>先頭行 - 選択肢の先頭行が正解になります。</li>
@@ -173,34 +153,26 @@
 						<li>最も少なかった回答 - 回答者の一番少なかった選択肢がが正解となります。(0は除く)</li>
 						<li>正解なし - アンケートのような正解のない問題を出す場合に使用します。</li>
 					</ul>
-				</td>
-			</tr>
-			<tr>
-				<th>タグ</th>
-				<td>任意の文字列を設定できます。(現在未使用ですが将来的に検索できるようになるかもしれません。)</td>
-			</tr>
-			<tr>
-				<th>説明</th>
-				<td>任意の説明を記述します。</td>
-			</tr>
-			<tr>
-				<th>参考リンク</th>
-				<td>問題の解説として参考になるサイトがあるならそのURLを指定します。</td>
-			</tr>
-		</table>
+				</dd>
+				<dt>タグ</dt>
+				<dd>任意の文字列を設定できます。(現在未使用ですが将来的に検索できるようになるかもしれません。)</dd>
+				<dt>説明</dt>
+				<dd>任意の説明を記述します。</dd>
+				<dt>参考リンク</dt>
+				<dd>問題の解説として参考になるサイトがあるならそのURLを指定します。</dd>
+			</dl>
+		</article>
+
 		<article class="alert alert-warning">
 			<p>イベント参加者はマイページから自分の参加したイベントの問題を振り返ることができるので、勉強会目的の場合は説明、参考リンクを設定しておくことで学習の助けとなります。</p>
 		</article>
-		<h3>問題の出題</h3>
-		<article>
-			<p>イベント開催時にはこの画面から問題を出題することができます。</p>
-		</article>
-		<table class="table">
-			<tr>
-				<th>ランキングに含める</th>
-				<td>チェックを外すと問題に正解してもランキング集計の対象外となります。</td>
-			</tr>
-		</table>
+
+		<dl>
+			<dt>問題の出題</dt>
+			<dd>イベント開催時にはこの画面から問題を出題することができます。</dd>
+			<dt>ランキングに含める</dt>
+			<dd>チェックを外すと問題に正解してもランキング集計の対象外となります。</dd>
+		</dl>
 		<article class="alert alert-warning">
 			<ul>
 				<li>正解なしの問題はランキングに含めることはできません。</li>
@@ -208,49 +180,41 @@
 				<li>それ以外の問題は指定の順で選択肢が表示されます。</li>
 			</ul>
 		</article>
-		<h3>問題の投稿</h3>
-		<article>
-			<p>ルームの設定で参加者の問題投稿が許可されている場合は誰でも問題を作成することができます。</p>
-			<p>ただし、問題の投稿後はその問題は主催者に委ねられるので問題を修正することはできません。</p>
-			<p>主催者は投稿された問題を自由に修正することができます。</p>
-		</article>
+		<dl>
+			<dt>問題の投稿</dt>
+			<dd>
+				<p>ルームの設定で参加者の問題投稿が許可されている場合は誰でも問題を作成することができます。</p>
+				<p>ただし、問題の投稿後はその問題は主催者に委ねられるので問題を修正することはできません。</p>
+				<p>主催者は投稿された問題を自由に修正することができます。</p>
+			</dd>
+		</dl>
 	</secition>
+	
 	<section>
-		<h2 class="alert alert-info">イベントの編集</h2>
+		<h2 class="alert alert-info subhead">イベントの編集</h2>
 		<article>
 			<p>サイドメニューの「イベントの編集」を選択することでイベントの編集、開始、終了を行う画面が表示されます。</p>
 			<p>イベントが開始されていない場合はイベント内容の入力フォームが表示され、その修正とイベントの開始を行うことができます。</p>
 			<p>イベントが開始されている場合は参加者一覧が表示されイベントの終了を行うことができます。</p>
 		</article>
-		<table class="table">
-			<tr>
-				<th>定員</th>
-				<td>イベントに参加できる人数を設定します。現在は最大50人に制限されています。</td>
-			</tr>
-			<tr>
-				<th>タイトル</th>
-				<td>任意のイベントタイトルを指定します。</td>
-			</tr>
-			<tr>
-				<th>開始日</th>
-				<td>イベントの開始予定日を指定します。</td>
-			</tr>
-			<tr>
-				<th>開始時刻</th>
-				<td>イベントの開始予定時刻を指定します。</td>
-			</tr>
-			<tr>
-				<th>パスコード</th>
-				<td>
-					<p>指定するとイベント参加時にパスコードの入力を求められるようになります。</p>
-					<p>(つまりパスコードを知っている人しかイベントに参加できなくなります。)</p>
-				</td>
-			</tr>
-			<tr>
-				<th>説明</th>
-				<td>任意の説明を記述します。</td>
-			</tr>
-		</table>
+		<dl>
+			<dt>定員</dt>
+			<dd>イベントに参加できる人数を設定します。現在は最大50人に制限されています。</dd>
+			<dt>タイトル</dt>
+			<dd>任意のイベントタイトルを指定します。</dd>
+			<dt>開始日</dt>
+			<dd>イベントの開始予定日を指定します。</dd>
+			<dt>開始時刻</dt>
+			<dd>イベントの開始予定時刻を指定します。</dd>
+			<dt>パスコード</dt>
+			<dd>
+				<p>指定するとイベント参加時にパスコードの入力を求められるようになります。</p>
+				<p>(つまりパスコードを知っている人しかイベントに参加できなくなります。)</p>
+			</dd>
+			<dt>説明</dt>
+			<dd>任意の説明を記述します。</dd>
+		</dl>
+
 		<article class="alert alert-warning">
 			<ul>
 				<li>イベントの設定項目に必須項目はありません。この画面の表示後に何も入力せずにすぐにイベントを開始することができます。</li>
@@ -260,8 +224,9 @@
 			</ul>
 		</article>
 	</secition>
+
 	<section>
-		<h2 class="alert alert-info">イベントへの参加</h2>
+		<h2 class="alert alert-info subhead">イベントへの参加</h2>
 		<article>
 			<p>主催者でないユーザーがルーム内にいる時にイベントが開始されるとイベントへの参加を問い合わせるパネルが表示されます。</p>
 			<p>ここで「参加」をクリックするとイベントに参加できます。</p>
@@ -276,14 +241,14 @@
 		</article>
 	</secition>
 	<section>
-		<h2 class="alert alert-info">問題の解答</h2>
+		<h2 class="alert alert-info subhead">問題の解答</h2>
 		<article>
 			<p>主催者が問題を出題するとすぐに参加者の端末で問題が表示されます。正解と思うボタンをクリックしてください。制限時間は10秒です。</p>
 			<p>解答後は選択肢ごとの人数がボタン上に表示され、10秒後には正解と問題の解説が表示されます。</p>
 		</article>
 	</secition>
 	<section>
-		<h2 class="alert alert-info">ランキング</h2>
+		<h2 class="alert alert-info subhead">ランキング</h2>
 		<article>
 			<p>サイドメニューの「ランキング」またはショートカットバーからランキング画面を開くことができます。</p>
 			<dl>
@@ -314,7 +279,7 @@
 		</article>
 	</secition>
 	<section>
-		<h2 class="alert alert-info">マイページ</h2>
+		<h2 class="alert alert-info subhead">マイページ</h2>
 		<article>
 			<p>サイドメニューの「マイページ」を選択することでマイページ画面を開くことができます。</p>
 			<p>マイページでは自分の参加したイベントまたは主催したイベントの問題を振りかえることができます。</p>
@@ -344,7 +309,7 @@
 		</article>
 	</secition>
 	<section>
-		<h2 class="alert alert-info">チャット</h2>
+		<h2 class="alert alert-info subhead">チャット</h2>
 		<article>
 			<p>サイドメニューの「チャット」またはショートカットバーからチャット画面を開くことができます。</p>
 			<p>オプションでここでの発言内容を同時にTwitterに投稿することもできます。</p>
@@ -355,19 +320,15 @@
 		</article>
 	</secition>
 	<section>
-		<h2 class="alert alert-info">ユーザー設定</h2>
+		<h2 class="alert alert-info subhead">ユーザー設定</h2>
 		<article>
 			<p>ユーザーメニューの「設定」をクリックすることでユーザー設定画面を開くことができます。</p>
 		</article>
-		<table class="table">
-			<tr>
-				<th>ユーザー名</th>
-				<td>ユーザー名を変更します。</td>
-			</tr>
-			<tr>
-				<th>チャットメッセージを通知する</th>
-				<td>チェックするとチャットに発言があった時にポップアップで通知されます。</td>
-			</tr>
-		</table>
+		<dl>
+			<dt>ユーザー名</dt>
+			<dd>ユーザー名を変更します。</dd>
+			<dt>チャットメッセージを通知する</dt>
+			<dd>チェックするとチャットに発言があった時にポップアップで通知されます。</dd>
+		</dl>
 	</secition>
 </div>
