--- a/app/views/help_en.scala.html
+++ b/app/views/help_en.scala.html
@@ -47,7 +47,10 @@
 	</secition>
 	<section>
 		<h2 class="alert alert-info">Screen shot</h2>
-		<article>ToDo スナップショットx2 画面内に番号を振る</article>
+		<article>
+			<img src="/assets/images/snapshot1_ja.png" style="width:220px;"/>
+			<img src="/assets/images/snapshot2_ja.png" style="width:220px;"/>
+		</article>
 		<ol>
 			<li>Menu button. Open side menu by clicking.</li>
 			<li>User menu. A drop down menu of user related functions.</li>
