--- a/app/views/help_ja.scala.html
+++ b/app/views/help_ja.scala.html
@@ -47,11 +47,14 @@
 	</secition>
 	<section>
 		<h2 class="alert alert-info subhead">画面構成</h2>
-		<article>ToDo スナップショットx2 画面内に番号を振る</article>
+		<article>
+			<img src="/assets/images/snapshot1_ja.png" style="width:220px;"/>
+			<img src="/assets/images/snapshot2_ja.png" style="width:220px;"/>
+		</article>
 		<ol>
 			<li>メニューボタン。クリックするとサイドメニューが表示されます。</li>
-			<li>ユーザーメニュー。ログインすると表示されるユーザー関連のドロップダウンメニューです。</li>
 			<li>サイドメニュー。ほとんどの機能はここから実行します。</li>
+			<li>ユーザーメニュー。ログインすると表示されるユーザー関連のドロップダウンメニューです。</li>
 			<li>ショートカットバー。ルームに入室した際に表示される良く使う機能へのショートカットです。</li>
 		</ol>
 	</secition>
